# met-dsl

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
.specify/memory/: constitution.md
docs/: A3_SUMMARY.md  AGENT_CONTRACT.md  AGENT_SKILLS.md  AI_TUNING_WORKFLOW.md  ARCH_DECISION_MATRIX.md  BWRAP_ENABLEMENT.md  CLI_REFERENCE.md  CLI_REFERENCE_RARE.md  CONTROLLED_SPEC.md  CONTROLLED_SPEC_TEMPLATE_LINEAR_ADVECTION.md  DECISIONS.md  DOC_STYLE.md  FEASIBILITY.md  GLOSSARY.md  HOOKS.md  IMPL_PLAN_SPEC.md  MANAGEMENT.md  ORCHESTRATION.md  PERFORMANCE_DIAGNOSTICS.md  PHYSICAL_TESTS.md  PHYSICAL_VALIDATION.md  README.md  ROADMAP.md  RUNBOOK.md  SPEC.md  STACK.md  TESTS.md  TUNING_MODEL.md  TUNING_WORKFLOW.md  WORKFLOW.md  WORKSPACE_LAYOUT.md  development.md
docs/design/: dependency_build_followup_prompt.md  deterministic_conductor.md  deterministic_followups.md  leaf_must_read_restructure.md  workflow_scaling_redesign.md  zero_base_architecture.md
docs/examples/: algorithm.resolved.example.yaml  (+3 more)
mcp_servers/: README.md  build_runtime_server.py  mcp_call.py  mcp_servers.example.json
tools/: audit_orchestration.py  check_artifact_syntax.py  codegen_bundle.py  codex_orchestration_runtime.py  dependency_graph.py  lang_backend_fortran.py  meta_contracts.py  new_agent_run_id.py  orchestration_diagnostics.py  orchestration_runtime.py  pure_leaf.py  run_workflow.py  runner_renderer.py  validate_pipeline_semantics.py  validate_workspace_root.py  verdict_evaluator.py  workflow_conductor.py
(+255 files in other folders)
